Add wildcard function

--- a/index.html
+++ b/index.html
@@ -257,6 +257,17 @@
                 bg: 'bg-green-500/10',
                 category: 'AI',
                 tags: ['Metadata', 'Analysis']
+            },
+            {
+                id: 'wildcard', 
+                title: 'Weighted Prompt Studio', // 建議改成工具內的實際名稱
+                description: '進階權重 Prompt 編輯器，支援區塊管理、CSV 匯入、機率模擬與語法生成。',
+                file: 'Wildcard.html', // 修正：指向正確的檔案名稱
+                icon: 'shuffle',       // 修正：使用更符合 "隨機/權重" 概念的圖標
+                color: 'text-orange-400', // 修改：使用橘色系，與綠色的 Tag Extractor 區隔
+                bg: 'bg-orange-500/10',
+                category: 'AI',
+                tags: ['Prompt', 'Editor'] // 更新標籤
             }
         ];
 
